# extended-notify

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
.claude/: settings.local.json
src/: lib.rs  test.rs  watch_task.rs
