[package]
name = "extended-notify"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
arcstr = "1.2.0"
enumflags2 = "0.7.12"
futures = "0.3.31"
fxhash = "0.2.1"
log = "0.4.29"
notify = "8.2.0"
poolshark = "0.2.6"
tokio = { version = "1.48.0", features = ["fs", "macros", "rt-multi-thread", "sync", "time"] }
