[package]
name = "extended-notify"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Eric Stokes <eestokes@pm.me>"]
homepage = "https://github.com/estokes/extended-notify"
repository = "https://github.com/estokes/extended-notify"
description = "extended cross-platform filesystem notifications"
documentation = "https://docs.rs/extended-notify"
keywords = ["events", "filesystem", "notify", "watch"]
categories = ["filesystem"]

[dependencies]
anyhow = "1.0.100"
arcstr = "1.2.0"
derive_builder = "0.20.2"
enumflags2 = "0.7.12"
futures = "0.3.31"
fxhash = "0.2.1"
log = "0.4.29"
notify = "8.2.0"
notify-debouncer-full = "0.6.0"
poolshark = "0.2.6"
tokio = { version = "1.48.0", features = ["fs", "macros", "rt-multi-thread", "sync", "time"] }

[dev-dependencies]
env_logger = "0.11.8"
tempfile = "3"
